Header section finished

--- a/#src/_header.html
+++ b/#src/_header.html
@@ -1,5 +1,30 @@
 <header class="header">
 	<div class="header__content _container">
-
+		<div class="header__menu menu">
+			<div class="menu__icon icon-menu">
+				<span></span>
+				<span></span>
+				<span></span>
+			</div>
+			<nav class="menu__body">
+				<ul class="menu__list">
+					<li><a href="" class="menu__link active">О фестивале</a></li>
+					<li><a href="" class="menu__link">Отзывы</a></li>
+					<li><a href="" class="menu__link">Фото и видео</a></li>
+					<li><a href="" class="menu__link">Расписание</a></li>
+					<li><a href="" class="menu__link">Участники</a></li>
+					<li><a href="" class="menu__link">Партнеры</a></li>
+					<li><a href="" class="menu__link">Наша команда</a></li>
+					<li><a href="" class="menu__link">Место проведения</a></li>
+				</ul>
+				<div class="header__footer">
+					<div class="header__social social">
+						<a href="https://www.facebook.com/ceramicsfestkaluga/?ref=pages_you_manage" class="social__item _icon-facebook" target="_blank" rel="noopener"></a>
+						<a href="https://vk.com/ceramics_fest_kaluga" class="social__item _icon-vk" target="_blank" rel="noopener"></a>
+						<a href="https://instagram.com/ceramics_fest_kaluga?utm_medium=copy_link" class="social__item _icon-instagram" target="_blank" rel="noopener"></a>
+					</div>
+				</div>
+			</nav>
+		</div>
 	</div>
 </header>
