--- a/#src/index.html
+++ b/#src/index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html lang="ru">
 	@@include('_head.html',{
-	"title":"Главная"
+	"title":"Фестиваль керамики Млечный путь"
 	})
 	<body>
 		<div class="wrapper">
 			@@include('_header.html',{})
 			<main class="page">
-
+				<section class="page__intro intro">
+					<div class="intro__container _container">
+						<div class="intro__body">
+							<div class="intro__content">
+								<div class="intro__logo _ibg">
+									<img src="./img/intro/logo.png" alt="Festival logo">
+								</div>
+								<div class="intro__text">11/06 - 14/06 Калуга, Октябрьская 17а</div>
+								<div class="intro__labels">
+									<div class="intro__image"><img src="./img/intro/650.png" alt="650 лет Калуга"></div>
+									<div class="intro__image"><img src="./img/intro/2.webp" alt="ИКЦ"></div>
+									<div class="intro__image"><img src="./img/intro/Coat_of_arms_of_Kalu.svg" alt="Правительство Калуга"></div>
+									<div class="intro__image"><img src="./img/intro/4.webp" alt="Гагарин Калуга"></div>
+								</div>
+							</div>
+							<div class="intro__main-image intro-hand">
+								<div class="intro-hand__image _ibg">
+									<img src="./img/intro/hand.png" alt="">
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
 			</main>
 			@@include('_footer.html',{})
 		</div>
