Intro's section finished

--- a/#src/index.html
+++ b/#src/index.html
@@ -14,7 +14,7 @@
 								<div class="intro__logo _ibg">
 									<img src="./img/intro/logo.png" alt="Festival logo">
 								</div>
-								<div class="intro__text">11/06 - 14/06 Калуга, Октябрьская 17а</div>
+								<div class="intro__text">11/06 - 14/06<br>Калуга, Октябрьская 17а</div>
 								<div class="intro__labels">
 									<div class="intro__image"><img src="./img/intro/650.png" alt="650 лет Калуга"></div>
 									<div class="intro__image"><img src="./img/intro/2.webp" alt="ИКЦ"></div>
