Philosophy's section done

--- a/#src/index.html
+++ b/#src/index.html
@@ -7,7 +7,7 @@
 		<div class="wrapper">
 			@@include('_header.html',{})
 			<main class="page">
-				<section class="page__intro intro">
+				<section class="intro">
 					<div class="intro__container _container">
 						<div class="intro__body">
 							<div class="intro__content">
@@ -28,6 +28,12 @@
 								</div>
 							</div>
 						</div>
+					</div>
+				</section>
+				<section class="philosophy">
+					<div class="philosophy__container _container">
+						<h2 class="philosophy__title">Философия фестиваля «Млечный Путь»</h2>
+						<div class="philosophy__text">Космос всегда остается загадочным и притягательным для человека. Глядя в темное небо, мы мечтаем и любим, философствуем и придумываем. «Млечный Путь» - как раз об этом. О загадочности, о хрупкости, о моменте, о красоте, о человеке, о его месте в этой Вселенной.</div>
 					</div>
 				</section>
 			</main>
