Aboutus's section done

--- a/#src/index.html
+++ b/#src/index.html
@@ -36,6 +36,19 @@
 						<div class="philosophy__text">Космос всегда остается загадочным и притягательным для человека. Глядя в темное небо, мы мечтаем и любим, философствуем и придумываем. «Млечный Путь» - как раз об этом. О загадочности, о хрупкости, о моменте, о красоте, о человеке, о его месте в этой Вселенной.</div>
 					</div>
 				</section>
+				<section class="aboutus">
+					<div class="aboutus__container _container">
+						<h3 class="aboutus__title title">Что пишут о нас в СМИ</h3>
+						<div class="aboutus__content">
+							<a href="https://nedelya40.ru/uorhol-magritt-i-chashi-terpeniya-v-kaluge-proshel-festival-sovremennoj-keramiki-mlechnyj-put_142844/" class="aboutus__smi" target="_blank" rel="noopener">
+									<img src="./img/aboutus/kaluga_week.webp" alt="Калужская неделя">
+							</a>
+							<a href="https://nikatv.ru/tv/programs/kulturnaya-sreda/EAdJhEP2UXa2VJ6X4v93" class="aboutus__smi" target="_blank" rel="noopener">
+									<img src="./img/aboutus/nikaTV.webp" alt="НикаТВ">
+							</a>
+						</div>
+					</div>
+				</section>
 			</main>
 			@@include('_footer.html',{})
 		</div>
