--- a/#src/index.html
+++ b/#src/index.html
@@ -36,6 +36,11 @@
 						<div class="philosophy__text">Космос всегда остается загадочным и притягательным для человека. Глядя в темное небо, мы мечтаем и любим, философствуем и придумываем. «Млечный Путь» - как раз об этом. О загадочности, о хрупкости, о моменте, о красоте, о человеке, о его месте в этой Вселенной.</div>
 					</div>
 				</section>
+				<section class="divider">
+					<div class="divider__container _container">
+						<div class="divider__line"></div>
+					</div>
+				</section>
 				<section class="aboutus">
 					<div class="aboutus__container _container">
 						<h3 class="aboutus__title title">Что пишут о нас в СМИ</h3>
