--- a/#src/index.html
+++ b/#src/index.html
@@ -70,9 +70,11 @@
 										</div>
 										<div class="item-member__description description-member">
 											<div class="description-member__part">Родилась в 1977 г. в г. Хотьково, Московская область. В 1997 году окончила Абрамцевский художественно-промышленный колледж им. В.М. Васнецова, отделение художественная керамика. В 2001 году окончила Московский государственный педагогический университет.</div>
-											<div class="description-member__part_hide">1999-2009 год - преподаватель АХПК им. В. М. Васнецова, 2005-2011 гг. -научный сотрудник музея-заповедника "Абрамцево". С 2010 года - член Сергиево-Посадского </div>
+											<div class="description-member__part description-member__part_hide">1999-2009 год - преподаватель АХПК им. В. М. Васнецова, 2005-2011 гг. -научный сотрудник музея-заповедника "Абрамцево". С 2010 года - член Сергиево-Посадского </div>
 										</div>
-										<div class="item-member__footer"></div>
+										<div class="item-member__footer">
+											<button  class="item-member__expand _icon-expand-arrow"></button>
+										</div>
 									</div>
 
 								</div>
@@ -87,9 +89,11 @@
 										</div>
 										<div class="item-member__description description-member">
 											<div class="description-member__part">Родилась 18 мая 1976 года в г. Калининграде. Закончила с отличием отделение художественной керамики АХПК им. Васнецова в 1998 г. Закончила МГОПУ им. Шолохова по специальности «Декоративно-прикладное искусство и народные промыслы».</div>
-											<div class="description-member__part_hide">Член СХР с 2007г., член МСХ с 2013г. Диплом МСХ 27-ой выставки молодых художников Москвы 2003г., диплом СХР выставки молодые художники России 2007г., диплом СХР выставки «Россия XI» 2009г., государственная стипендия 2009г., диплом СХР 2015, 2019гг. </div>
+											<div class="description-member__part description-member__part_hide">Член СХР с 2007г., член МСХ с 2013г. Диплом МСХ 27-ой выставки молодых художников Москвы 2003г., диплом СХР выставки молодые художники России 2007г., диплом СХР выставки «Россия XI» 2009г., государственная стипендия 2009г., диплом СХР 2015, 2019гг. </div>
 										</div>
-										<div class="item-member__footer"></div>
+										<div class="item-member__footer">
+											<button  class="item-member__expand _icon-expand-arrow"></button>
+										</div>
 									</div>
 								</div>
 
@@ -105,9 +109,11 @@
 										<div class="item-member__description description-member">
 											<div class="description-member__part">Родился в г.Ереване 1976 г. Заниматься керамикой начал в 1997 году. Фотографируя работы друзей, сам загорелся изяществом пластики керамики. С тех пор не перестает удивляться и восхищаться этим видом искусства.
 											</div>
-											<div class="description-member__part_hide">Кредо: Гончарю с удовольствием, тем более это особая медитация, которая воспитывает характер и открывает новые горизонты </div>
+											<div class="description-member__part description-member__part_hide">Кредо: Гончарю с удовольствием, тем более это особая медитация, которая воспитывает характер и открывает новые горизонты </div>
 										</div>
-										<div class="item-member__footer"></div>
+										<div class="item-member__footer">
+											<button  class="item-member__expand _icon-expand-arrow"></button>
+										</div>
 									</div>
 								</div>
 							</div>
