Member section. Create json data file and button to load additional members

--- a/#src/index.html
+++ b/#src/index.html
@@ -96,7 +96,6 @@
 										</div>
 									</div>
 								</div>
-
 								<div class="members__item item-member">
 									<div class="item-member__body">
 										<div class="item-member__header">
@@ -116,6 +115,7 @@
 										</div>
 									</div>
 								</div>
+								<button class="show-more btn">Показать остальных</button>
 							</div>
 						</div>
 					</div>
