Members section. Add load members from json

--- a/#src/index.html
+++ b/#src/index.html
@@ -115,8 +115,8 @@
 										</div>
 									</div>
 								</div>
-								<button class="show-more btn">Показать остальных</button>
 							</div>
+							<button class="members__show-more btn">Показать остальных</button>
 						</div>
 					</div>
 				</section>
