--- a/#src/index.html
+++ b/#src/index.html
@@ -126,6 +126,129 @@
 						</div>
 					</div>
 				</section>
+				<section class="program">
+					<div class="program__container _container">
+						<h2 class="program__title title">Программа фестиваля</h2>
+						<div class="program__body">
+							<div class="program__billboard billboard">
+								<div class="billboard__header">
+									<div class="billboard__date">Пятница, 11 июня</div>
+									<div class="billboard__title">
+										<h3>Открытие фестиваля Млечный путь!</h3>
+									</div>
+								</div>
+								<div class="billboard__content">
+									<div class="billboard__images">
+										<div class="billboard__image-item _ibg pb140">
+											<img src="./img/programs/billboard1.webp" alt="Афиша фестиваля Млечный путь">
+										</div>
+										<div class="billboard__image-item _ibg pb100">
+											<img src="./img/programs/billboard2.webp" alt="Афиша Город Космос Люди">
+										</div>
+									</div>
+									<div class="billboard__program">
+										<p>19.00 - Вернисаж выставки мастеров современной керамики. Локация – Выставочный зал ИКЦ.</p>
+										<p>19.00 - Перформанс «Млечный Путь» Инновационного Театра Балета ИКЦ . Руководитель - Ксения Голыжбина. Локация - Выставочный зал ИКЦ.</p>
+										<p>20.00 - Открытие фотовыставки Лёли Васильевой «Город. Космос. Люди.», г. Калуга. Локация - Фойе ИКЦ.</p>
+									</div>
+								</div>
+							</div>
+							<div class="program__billboard billboard">
+								<div class="billboard__header">
+									<div class="billboard__date">Суббота, 12 июня</div>
+									<div class="billboard__title">
+									</div>
+								</div>
+								<div class="billboard__content">
+									<div class="billboard__images">
+										<div class="billboard__image-item _ibg pb177">
+											<img src="./img/programs/billboard3.webp" alt="Афиша Серебренные облака">
+										</div>
+										<div class="billboard__image-item _ibg pb140">
+											<img src="./img/programs/billboard4.webp" alt="DJ Uncle Deep">
+										</div>
+									</div>
+									<div class="billboard__program">
+										<p>12.00 – Керамический маркет: авторская керамика. Локация - Внутренний дворик ИКЦ. При поддержке ТПП Калужской области.</p>
+										<p>12.00 - Фуд-корт. Локация - Внутренний дворик ИКЦ. При поддержке ТПП Калужской области.</p>
+										<p>12.00 - Мастер-класс по керамике: «Как создавался пласт Марсианин». Андрианова Анна & Воробьев Валерий, г. Сергиев Посад.</p>
+										<p>13.00 - Мастер-класс по керамике: «Пласт и его возможности. Ваза и другие формы». Решетников Виктор, г. Москва.</p>
+										<p>14.00 - Мастер-класс по керамике: «Мелкая пластика. Сова». Гамбарян Елена, г. Москва.</p>
+										<p>15.00 - Мастер-класс по керамике: «Летнее чаепитие. Пиала из жгутов». Марамыгина Анна, г. Москва.</p>
+										<p>16.00 - Мастер-класс по керамике: «Лето на память. Небольшие емкости с отпечатками растений». Зотова Алена, г.Москва.</p>
+										<p>17.00 - Мастер-класс по керамике: «Декоративный перец». Миниахметова Надия, г. Санкт-Петербург.</p>
+										<p>19.00 - Хореографический спектакль-перформанс «Серебряные облака». Посвящение Энди Уорхолу. При участии группы «Абстракция в керамике» и ансамбля танца «Образ». Хореограф-Юлия Бычкова. Локация - зал-трансформер ИКЦ.</p>
+										<p>20.00 - DJ. Электронная музыка. Локация - Внутренний дворик ИКЦ.</p>
+									</div>
+								</div>
+							</div>
+							<div class="program__billboard billboard">
+								<div class="billboard__header">
+									<div class="billboard__date">Воскресенье, 13 июня</div>
+									<div class="billboard__title">
+									</div>
+								</div>
+								<div class="billboard__content">
+									<div class="billboard__images">
+										<div class="billboard__image-item _ibg pb177">
+											<img src="./img/programs/billboard5.webp" alt="Афиша Космическое возрождение традиций">
+										</div>
+										<div class="billboard__image-item _ibg pb177">
+											<img src="./img/programs/billboard6.webp" alt="DJ arcttic">
+										</div>
+									</div>
+									<div class="billboard__program">
+										<p>11.00 - Кураторская экскурсия по выставке от Ольги Равинской, г. Москва. Локация - Выставочный зал.</p>
+										<p>12.00 - Керамический маркет: авторская керамика. Локация - Внутренний дворик ИКЦ. При поддержке ТПП Калужской области.</p>
+										<p>12.00 - Фуд-корт. Локация - Внутренний дворик ИКЦ. При поддержке ТПП Калужской области.</p>
+										<p>12.00 - Мастер-класс по керамике: «Что такое маскарон и как его сделать из глины». Семенова Елизавета, г.Москва.</p>
+										<p>13.00 - Мастер-класс по керамике: «Подставка Луч. Как работать с выкройкой и пластом, немного о конструировании и тиражировании». Визель Инга, г.Москва.</p>
+										<p>14.00 - Мастер-класс по керамике: «Керамическая птаха. Как слепить условную декоративную скульптуру». Веремеенко Виктория, г. Москва.</p>
+										<p>14.00 - Мастер-класс по керамике: «Что такое отминка в форму и как сделать небольшую мисочку». Веремеенко Иван, г. Москва</p>
+										<p>15.00 - Мастер-класс на гончарном круге «Космос. Калуга-650»: Балбабян Григор, г. Ереван.</p>
+										<p>16.30 - Перформанс «Ты - мой Космос». Студия «Тодес». г. Калуга. Руководитель - Оксана Евдокимова. Локация - Внутренний двор ИКЦ.</p>
+										<p>17.00 - Показ коллекции одежды из войлока «Космическое возрождение традиций» при участии танцевальной лаборатии ТЕКТ и Инновационного Театра Балета ИКЦ. Автор: дизайнер – фелтмейкер Лидия Утенкова. Локация - Внутренний двор ИКЦ.</p>
+										<p>18.00 - DJ. Электронная музыка. Локация - Внутренний дворик ИКЦ.</p>
+									</div>
+								</div>
+							</div>
+							<div class="program__billboard billboard">
+								<div class="billboard__header">
+									<div class="billboard__date">Понедельник, 14 июня</div>
+									<div class="billboard__title">
+										<h3>Закрытие фестиваля - Калуга-650!</h3>
+									</div>
+								</div>
+								<div class="billboard__content">
+									<div class="billboard__images">
+										<div class="billboard__image-item _ibg pb100">
+											<img src="./img/programs/billboard7.webp" alt="Афиша Перфоманс по творчеству Рене Магритта">
+										</div>
+										<div class="billboard__image-item _ibg pb100">
+											<img src="./img/programs/billboard8.webp" alt="Афиша Кавер группы Папа Гнома и Белов">
+										</div>
+										<div class="billboard__image-item _ibg pb100">
+											<img src="./img/programs/billboard9.webp" alt="DJ Eywa">
+										</div>
+									</div>
+									<div class="billboard__program">
+										<p>12.00 – Керамический маркет: авторская керамика. Локация - Внутренний дворик ИКЦ. При поддержке ТПП Калужской области.</p>
+										<p>12.00 - Фуд-корт. Локация - Внутренний дворик ИКЦ. При поддержке ТПП Калужской области</p>
+										<p>12.00 - Мастер-класс по керамике «Калуга-650 лет»: Ирина Левитина, г. Калуга.</p>
+										<p>13.00 - Мастер-класс по керамике «Калуга-650 лет»: Олеся Рудченко, г. Калуга.</p>
+										<p>14.00 - Мастер-класс по керамике «Калуга-650»: ДПИКЦ «Достояние», г. Калуга.</p>
+										<p>15.00 - Флэшмоб «Если бы Космос был глиной»: ФМИ «Любомир» & Мастерская керамики ИКЦ, Татьяна Полубинская , г. Калуга .</p>
+										<p>16.00- Мастер-класс: Керамотерапия. «Трансформация. Единение. Космический ресурс.»: «Центр Современного Образования» & Мастерская керамики ИКЦ, Татьяна Полубинская, г. Калуга.</p>
+										<p>17.00 - Мастер-класс на гончарном круге «Космос. Калуга-650»: Балбабян Григор, г. Ереван</p>
+										<p>18.00 - Перформанс «Сын Человеческий. Рене Магритт». Хореограф Тимофей Хохлов. При участии ансамбля танца «Образ». Локация- Внутренний дворик ИКЦ.</p>
+										<p>19.00 - Музыкальный концерт. Кавер-группа «Папа Гнома и Белов». Локация - Внутренний двор ИКЦ.</p>
+										<p>20.00 - DJ. Электронная музыка. Локация - Внутренний дворик ИКЦ.</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
 			</main>
 			@@include('_footer.html',{})
 		</div>
