Registration section finished

--- a/#src/index.html
+++ b/#src/index.html
@@ -249,6 +249,16 @@
 						</div>
 					</div>
 				</section>
+				<section class="registration">
+					<div class="registration__container _container">
+						<h3 class="registration__title">
+							Регистрация на мастер классы
+							<a href="https://www.icc40.ru/calendar/events/master-klassy-po-keramike-festival-mlechnyy-put" target="_blank">
+								здесь
+							</a>
+						</h3>
+					</div>
+				</section>
 			</main>
 			@@include('_footer.html',{})
 		</div>
