Partners section finished

--- a/#src/index.html
+++ b/#src/index.html
@@ -259,6 +259,90 @@
 						</h3>
 					</div>
 				</section>
+				<section class="partners">
+					<div class="partners__container _container">
+						<div class="partners__item item-partners">
+							<h3 class="item-partners__title title">Партнеры</h3>
+							<div class="item-partners__intro">Если вы хотите стать партнером фестиваля, свяжитесь с нами, мы обсудим детали.</div>
+							<div class="item-partners__logos">
+								<div class="item-partners__image">
+									<img src="./img/partners/1.png" alt="Торгово-промышленная палата Калужской области">
+								</div>
+								<div class="item-partners__image">
+									<img src="./img/partners/2.png" alt="Государственный музей истории космонавтики им.К.Э.Циолковского">
+								</div>
+								<div class="item-partners__image">
+									<img src="./img/partners/3.png" alt="Любомир">
+								</div>
+								<div class="item-partners__image">
+									<img src="./img/partners/4.png" alt="Обучение и развитие">
+								</div>
+								<div class="item-partners__image">
+									<img src="./img/partners/5.png" alt="ТВ">
+								</div>
+								<div class="item-partners__image">
+									<img src="./img/partners/6.png" alt="Достояние">
+								</div>
+								<div class="item-partners__image">
+									<img src="./img/partners/7.png" alt="Sky-lounge">
+								</div>
+								<div class="item-partners__image">
+									<img src="./img/partners/8.png" alt="МГЕР">
+								</div>
+								<div class="item-partners__image">
+									<img src="./img/partners/9.png" alt="TODOES Kaluga family 1371">
+								</div>
+								<div class="item-partners__image">
+									<img src="./img/partners/10.png" alt="Образ Ансамбль танца">
+								</div>
+								<div class="item-partners__image">
+									<img src="./img/partners/11.png" alt="Suhl гостиница">
+								</div>
+								<div class="item-partners__image">
+									<img src="./img/partners/12.png" alt="Инновационный театр балета">
+								</div>
+								<div class="item-partners__image">
+									<img src="./img/partners/13.png" alt="Танцевальная лаборатория">
+								</div>
+							</div>
+						</div>
+						<section class="divider">
+							<div class="divider__container _container">
+								<div class="divider__line"></div>
+							</div>
+						</section>
+						<div class="partners__item item-partners">
+							<h3 class="item-partners__title title">Информационные партнеры</h3>
+							<div class="item-partners__logos">
+								<div class="item-partners__image">
+									<img src="./img/partners/14.png" alt="Ника ТВ">
+								</div>
+								<div class="item-partners__image">
+									<img src="./img/partners/15.png" alt="Калужская неделя">
+								</div>
+								<div class="item-partners__image">
+									<img src="./img/partners/16.png" alt="Калужские губернские ведомости">
+								</div>
+								<div class="item-partners__image">
+									<img src="./img/partners/17.png" alt="Весть news">
+								</div>
+								<div class="item-partners__image">
+									<img src="./img/partners/18.png" alt="Твоя Калуга">
+								</div>
+								<div class="item-partners__image">
+									<img src="./img/partners/19.png" alt="Что Где Калуга">
+								</div>
+								<div class="item-partners__image">
+									<img src="./img/partners/20.png" alt="4ceramics">
+								</div>
+								<div class="item-partners__image">
+									<img src="./img/partners/21.png" alt="Журнал Жить хорошо">
+								</div>
+							</div>
+						</div>
+
+					</div>
+				</section>
 			</main>
 			@@include('_footer.html',{})
 		</div>
