--- a/#src/_footer.html
+++ b/#src/_footer.html
@@ -1,5 +1,10 @@
 <footer class="footer">
 	<div class="footer__content _container">
-
+		<div class="footer__social social-footer">
+			<a href="https://www.facebook.com/ceramicsfestkaluga/?ref=pages_you_manage" class="social-footer__item _icon-facebook" target="_blank" rel="noopener"></a>
+			<a href="https://vk.com/ceramics_fest_kaluga" class="social-footer__item _icon-vk" target="_blank" rel="noopener"></a>
+			<a href="https://instagram.com/ceramics_fest_kaluga?utm_medium=copy_link" class="social-footer__item _icon-instagram" target="_blank" rel="noopener"></a>
+		</div>
+		<div class="footer__copy">Разработан kivals.90@yandex.ru</div>
 	</div>
 </footer>
