Preparation for modal view billboard pic

--- a/#src/index.html
+++ b/#src/index.html
@@ -149,9 +149,15 @@
 								<div class="billboard__content">
 									<div class="billboard__images">
 										<div class="billboard__image-item _ibg pb140">
+											<div class="billboard__overlay">
+												<button class="billboard__button _icon-search"></button>
+											</div>
 											<img src="./img/programs/billboard1.webp" alt="Афиша фестиваля Млечный путь">
 										</div>
 										<div class="billboard__image-item _ibg pb100">
+											<div class="billboard__overlay">
+												<button class="billboard__button _icon-search"></button>
+											</div>
 											<img src="./img/programs/billboard2.webp" alt="Афиша Город Космос Люди">
 										</div>
 									</div>
@@ -171,9 +177,15 @@
 								<div class="billboard__content">
 									<div class="billboard__images">
 										<div class="billboard__image-item _ibg pb177">
+											<div class="billboard__overlay">
+												<button class="billboard__button _icon-search"></button>
+											</div>
 											<img src="./img/programs/billboard3.webp" alt="Афиша Серебренные облака">
 										</div>
 										<div class="billboard__image-item _ibg pb140">
+											<div class="billboard__overlay">
+												<button class="billboard__button _icon-search"></button>
+											</div>
 											<img src="./img/programs/billboard4.webp" alt="DJ Uncle Deep">
 										</div>
 									</div>
@@ -200,9 +212,15 @@
 								<div class="billboard__content">
 									<div class="billboard__images">
 										<div class="billboard__image-item _ibg pb177">
+											<div class="billboard__overlay">
+												<button class="billboard__button _icon-search"></button>
+											</div>
 											<img src="./img/programs/billboard5.webp" alt="Афиша Космическое возрождение традиций">
 										</div>
 										<div class="billboard__image-item _ibg pb177">
+											<div class="billboard__overlay">
+												<button class="billboard__button _icon-search"></button>
+											</div>
 											<img src="./img/programs/billboard6.webp" alt="DJ arcttic">
 										</div>
 									</div>
@@ -231,12 +249,21 @@
 								<div class="billboard__content">
 									<div class="billboard__images">
 										<div class="billboard__image-item _ibg pb100">
+											<div class="billboard__overlay">
+												<button class="billboard__button _icon-search"></button>
+											</div>
 											<img src="./img/programs/billboard7.webp" alt="Афиша Перфоманс по творчеству Рене Магритта">
 										</div>
 										<div class="billboard__image-item _ibg pb100">
+											<div class="billboard__overlay">
+												<button class="billboard__button _icon-search"></button>
+											</div>
 											<img src="./img/programs/billboard8.webp" alt="Афиша Кавер группы Папа Гнома и Белов">
 										</div>
 										<div class="billboard__image-item _ibg pb100">
+											<div class="billboard__overlay">
+												<button class="billboard__button _icon-search"></button>
+											</div>
 											<img src="./img/programs/billboard9.webp" alt="DJ Eywa">
 										</div>
 									</div>
