Preparation for modal view. Add script

--- a/#src/index.html
+++ b/#src/index.html
@@ -136,6 +136,10 @@
 					</div>
 				</section>
 				<section class="program">
+					<div class="program-modal">
+						<span class="program-modal__close">×</span>
+						<img class="program-modal__modal-content">
+					</div>
 					<div class="program__container _container">
 						<h2 class="program__title title">Программа фестиваля</h2>
 						<div class="program__body">
