Modal view of billboards finished

--- a/#src/index.html
+++ b/#src/index.html
@@ -136,9 +136,8 @@
 					</div>
 				</section>
 				<section class="program">
-					<div class="program-modal">
+					<div class="program-modal _hide">
 						<span class="program-modal__close">×</span>
-						<img class="program-modal__modal-content">
 					</div>
 					<div class="program__container _container">
 						<h2 class="program__title title">Программа фестиваля</h2>
@@ -153,15 +152,13 @@
 								<div class="billboard__content">
 									<div class="billboard__images">
 										<div class="billboard__image-item _ibg pb140">
-											<div class="billboard__overlay">
-												<button class="billboard__button _icon-search"></button>
-											</div>
+											<div class="billboard__overlay"></div>
+											<button class="billboard__button _icon-search"></button>
 											<img src="./img/programs/billboard1.webp" alt="Афиша фестиваля Млечный путь">
 										</div>
 										<div class="billboard__image-item _ibg pb100">
-											<div class="billboard__overlay">
-												<button class="billboard__button _icon-search"></button>
-											</div>
+											<div class="billboard__overlay"></div>
+											<button class="billboard__button _icon-search"></button>
 											<img src="./img/programs/billboard2.webp" alt="Афиша Город Космос Люди">
 										</div>
 									</div>
@@ -182,14 +179,14 @@
 									<div class="billboard__images">
 										<div class="billboard__image-item _ibg pb177">
 											<div class="billboard__overlay">
-												<button class="billboard__button _icon-search"></button>
 											</div>
+											<button class="billboard__button _icon-search"></button>
 											<img src="./img/programs/billboard3.webp" alt="Афиша Серебренные облака">
 										</div>
 										<div class="billboard__image-item _ibg pb140">
 											<div class="billboard__overlay">
-												<button class="billboard__button _icon-search"></button>
 											</div>
+											<button class="billboard__button _icon-search"></button>
 											<img src="./img/programs/billboard4.webp" alt="DJ Uncle Deep">
 										</div>
 									</div>
@@ -217,14 +214,14 @@
 									<div class="billboard__images">
 										<div class="billboard__image-item _ibg pb177">
 											<div class="billboard__overlay">
-												<button class="billboard__button _icon-search"></button>
 											</div>
+											<button class="billboard__button _icon-search"></button>
 											<img src="./img/programs/billboard5.webp" alt="Афиша Космическое возрождение традиций">
 										</div>
 										<div class="billboard__image-item _ibg pb177">
 											<div class="billboard__overlay">
-												<button class="billboard__button _icon-search"></button>
 											</div>
+											<button class="billboard__button _icon-search"></button>
 											<img src="./img/programs/billboard6.webp" alt="DJ arcttic">
 										</div>
 									</div>
@@ -254,20 +251,20 @@
 									<div class="billboard__images">
 										<div class="billboard__image-item _ibg pb100">
 											<div class="billboard__overlay">
-												<button class="billboard__button _icon-search"></button>
 											</div>
+											<button class="billboard__button _icon-search"></button>
 											<img src="./img/programs/billboard7.webp" alt="Афиша Перфоманс по творчеству Рене Магритта">
 										</div>
 										<div class="billboard__image-item _ibg pb100">
 											<div class="billboard__overlay">
-												<button class="billboard__button _icon-search"></button>
 											</div>
+											<button class="billboard__button _icon-search"></button>
 											<img src="./img/programs/billboard8.webp" alt="Афиша Кавер группы Папа Гнома и Белов">
 										</div>
 										<div class="billboard__image-item _ibg pb100">
 											<div class="billboard__overlay">
-												<button class="billboard__button _icon-search"></button>
 											</div>
+											<button class="billboard__button _icon-search"></button>
 											<img src="./img/programs/billboard9.webp" alt="DJ Eywa">
 										</div>
 									</div>
