--- a/#src/index.html
+++ b/#src/index.html
@@ -30,7 +30,7 @@
 						</div>
 					</div>
 				</section>
-				<section class="philosophy">
+				<section class="philosophy" id="philosophy">
 					<div class="philosophy__container _container">
 						<h2 class="philosophy__title">Философия фестиваля «Млечный Путь»</h2>
 						<div class="philosophy__text">Космос всегда остается загадочным и притягательным для человека. Глядя в темное небо, мы мечтаем и любим, философствуем и придумываем. «Млечный Путь» - как раз об этом. О загадочности, о хрупкости, о моменте, о красоте, о человеке, о его месте в этой Вселенной.</div>
@@ -54,7 +54,7 @@
 						</div>
 					</div>
 				</section>
-				<section class="members">
+				<section class="members" id="members">
 					<div class="members__container _container">
 						<div class="members__body">
 							<h3 class="members__title title">Участники</h3>
@@ -135,7 +135,7 @@
 						</div>
 					</div>
 				</section>
-				<section class="program">
+				<section class="program" id="program">
 					<div class="program-modal _hide">
 						<span class="program-modal__close">×</span>
 					</div>
@@ -296,7 +296,7 @@
 						</h3>
 					</div>
 				</section>
-				<section class="partners">
+				<section class="partners" id="partners">
 					<div class="partners__container _container">
 						<div class="partners__item item-partners">
 							<h3 class="item-partners__title title">Партнеры</h3>
@@ -380,7 +380,7 @@
 
 					</div>
 				</section>
-				<section class="map">
+				<section class="map" id="map">
 					<div class="map__container _container">
 						<h3 class="map__title title">Место проведения</h3>
 						<div class="map__description">ИКЦ — это современная многофункциональная площадка в Калуге, на которой регулярно проходят выставки, перформансы, спектакли, лекции, концерты и мастер-классы от экспертов в разных областях науки, культуры и искусства, ориентированные на широкую аудиторию.</div>
