--- a/#src/_header.html
+++ b/#src/_header.html
@@ -8,14 +8,14 @@
 			</div>
 			<nav class="menu__body">
 				<ul class="menu__list">
-					<li><a href="" class="menu__link active">О фестивале</a></li>
-					<li><a href="" class="menu__link">Отзывы</a></li>
-					<li><a href="" class="menu__link">Фото и видео</a></li>
-					<li><a href="" class="menu__link">Расписание</a></li>
-					<li><a href="" class="menu__link">Участники</a></li>
-					<li><a href="" class="menu__link">Партнеры</a></li>
-					<li><a href="" class="menu__link">Наша команда</a></li>
-					<li><a href="" class="menu__link">Место проведения</a></li>
+					<li><a href="#philosophy" class="menu__link active">О фестивале</a></li>
+					<li><a href="#" class="menu__link">Отзывы</a></li>
+					<li><a href="#" class="menu__link">Фото и видео</a></li>
+					<li><a href="#program" class="menu__link">Расписание</a></li>
+					<li><a href="#members" class="menu__link">Участники</a></li>
+					<li><a href="#partners" class="menu__link">Партнеры</a></li>
+					<li><a href="#" class="menu__link">Наша команда</a></li>
+					<li><a href="#map" class="menu__link">Место проведения</a></li>
 				</ul>
 				<div class="header__footer">
 					<div class="header__social social">
