Add photos page

--- a/#src/_header.html
+++ b/#src/_header.html
@@ -10,7 +10,7 @@
 				<ul class="menu__list">
 					<li><a href="/#philosophy" class="menu__link _active _goto-block">О фестивале</a></li>
 					<li><a href="/reviews.html" class="menu__link">Отзывы</a></li>
-					<li><a href="#" class="menu__link">Фото и видео</a></li>
+					<li><a href="/photos.html" class="menu__link">Фото и видео</a></li>
 					<li><a href="/#program" class="menu__link _goto-block">Расписание</a></li>
 					<li><a href="/#members" class="menu__link _goto-block">Участники</a></li>
 					<li><a href="/#partners" class="menu__link _goto-block">Партнеры</a></li>
