Our team page finished

--- a/#src/_header.html
+++ b/#src/_header.html
@@ -14,7 +14,7 @@
 					<li><a href="/#program" class="menu__link _goto-block">Расписание</a></li>
 					<li><a href="/#members" class="menu__link _goto-block">Участники</a></li>
 					<li><a href="/#partners" class="menu__link _goto-block">Партнеры</a></li>
-					<li><a href="#" class="menu__link">Наша команда</a></li>
+					<li><a href="/team.html" class="menu__link">Наша команда</a></li>
 					<li><a href="/#map" class="menu__link _goto-block">Место проведения</a></li>
 				</ul>
 				<div class="header__footer">
