--- a/#src/team.html
+++ b/#src/team.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 @@include('_head.html',{
-"title":"Команда фестиваля керамики Млечный путь"
+"title":"Команда фестиваля"
 })
 <body>
 <div class="wrapper">
