--- a/#src/reviews.html
+++ b/#src/reviews.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 @@include('_head.html',{
-"title":"Фестиваль керамики Млечный путь"
+"title":"Отзывы фестиваля"
 })
 <body>
 <div class="wrapper">
