Fix js for header menu behavior

--- a/#src/_header.html
+++ b/#src/_header.html
@@ -8,7 +8,7 @@
 			</div>
 			<nav class="menu__body">
 				<ul class="menu__list">
-					<li><a href="/#philosophy" class="menu__link">О фестивале</a></li>
+					<li><a href="/" class="menu__link">О фестивале</a></li>
 					<li><a href="/reviews.html" class="menu__link">Отзывы</a></li>
 					<li><a href="/photos.html" class="menu__link">Фото и видео</a></li>
 					<li><a href="/#program" class="menu__link">Расписание</a></li>
