--- a/#src/_head.html
+++ b/#src/_head.html
@@ -2,6 +2,7 @@
 	<title>@@title</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
+	 <meta name="yandex-verification" content="9c088efdadb9e1ea" />
 	<link rel="stylesheet" href="css/style.min.css">
 	<link rel="shortcut icon" href="favicon.png">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
