--- a/#src/index.html
+++ b/#src/index.html
@@ -63,20 +63,16 @@
 									<div class="members__item item-member">
 										<div class="item-member__body">
 											<div class="item-member__header">
-												<div class="item-member__name">Андрианова Анна</div>
+												<div class="item-member__name">Марамыгина Анна</div>
 												<div class="item-member__position"></div>
 											</div>
 											<div class="item-member__photo _ibg">
-												<img src="./img/members/андрианова.jpeg" alt="Андрианова Анна">
+												<img src="./img/members/Марамыгина.jpeg" alt="Марамыгина Анна">
 											</div>
 											<div class="item-member__description description-member">
-												<div class="description-member__part">Родилась в 1977 г. в г. Хотьково, Московская область. В 1997 году окончила Абрамцевский художественно-промышленный колледж им. В.М. Васнецова, отделение художественная керамика. В 2001 году окончила Московский государственный педагогический университет.</div>
-												<div class="description-member__part description-member__part_hide">1999-2009 год - преподаватель АХПК им. В. М. Васнецова,
-													2005-2011 гг. -научный сотрудник музея-заповедника "Абрамцево".
-													С 2010 года - член Сергиево-Посадского отделения ВТОО " СХР".
-													С 2015 года - член МСХ и АХДи.
-													Участница всероссийских, региональных, областных и московских выставок.
-													Произведения находятся в музеях, частных коллекциях в России и за рубежом. </div>
+												<div class="description-member__part">Родилась в 1988 г. в г. Пермь. Образование: Санкт-Петербургская художественно-промышленная академия им. А.Л. Штиглица, кафедра керамики и стекла(2010г. -2016г.) </div>
+												<div class="description-member__part description-member__part_hide">Кредо:
+													Керамика для меня это и цвет, и форма, живопись и скульптура одновременно. Ещё мне нравится, что этот материал даёт мне богатую палитру цветов. В глине я могу выразить все свои эмоции, все свои чувства. Любимая тема моего творчества - лес. Лес таинственный и загадочный. Любимые техники - это дровяной обжиг раку и цветные глазури.</div>
 											</div>
 											<div class="item-member__footer">
 												<button  class="item-member__expand _icon-expand-arrow"></button>
@@ -87,18 +83,23 @@
 									<div class="members__item item-member">
 										<div class="item-member__body">
 											<div class="item-member__header">
-												<div class="item-member__name">Базлова Екатерина</div>
+												<div class="item-member__name">Равинская Ольга</div>
 												<div class="item-member__position"></div>
 											</div>
 											<div class="item-member__photo _ibg">
-												<img src="./img/members/Базлова.jpeg" alt="Базлова Екатерина">
+												<img src="./img/members/Равинская.jpeg" alt="Равинская Ольга">
 											</div>
 											<div class="item-member__description description-member">
-												<div class="description-member__part">Родилась 18 мая 1976 года в г. Калининграде.
-													Закончила с отличием отделение художественной керамики АХПК им. Васнецова в 1998 г.
-													Закончила МГОПУ им. Шолохова по специальности «Декоративно-прикладное искусство и народные промыслы». </div>
-												<div class="description-member__part description-member__part_hide">Член СХР с 2007г., член МСХ с 2013г. Диплом МСХ 27-ой выставки молодых художников Москвы 2003г., диплом СХР выставки молодые художники России 2007г., диплом СХР выставки «Россия XI» 2009г., государственная стипендия 2009г., диплом СХР 2015, 2019гг.
-													Член комисии ДПИ СХР с 2019г. Участница многочисленных российских и международных выставок. Работы находятся в частных коллекциях в России и за рубежом.</div>
+												<div class="description-member__part">Родилась в Москве в 1970 году
+													В 1989 окончила московское художественное училище ПАМ.1905 года
+													В 1999 окончила МГХПА им. Строганова ,отделение керамики.
+													Дипломант российской академии художеств
+													Стипендиат министерства культуры РФ.
+													Член московсого союза художников.
+													Член союза художников россии.</div>
+												<div class="description-member__part description-member__part_hide">Кредо:
+													Источником вдохновения и идей для меня служит природа. Наблюдая одни и те же явления в разных уголках земли ,испытываешь разные эмоции. Эти эмоции и впечатления я пытаюсь переложить на язык керамики и погрузить зрителя в состояние созерцания.
+													Работаю в основном с шамотной глиной и отдаю предпочтение ручной лепке и пластам.</div>
 											</div>
 											<div class="item-member__footer">
 												<button  class="item-member__expand _icon-expand-arrow"></button>
